# OTUS

./: .gitignore  README.md  lesson_04.py  pytest.ini  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  requirements.txt
homework_03/fastapi-app/: app.py
homework_03/fastapi-app/views/: users.py
homework_03/views/: __init__.py  trades.py  users.py
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_04/models_p/: base.py  post.py  user.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: docker-compose.yml  pyproject.toml
homework_06/app/migrations/versions/: 2024_05_22_2343-6d9505206602_create_products_table.py
homework_06/app/templates/: index.html
homework_06/app/templates/products/: add.html
homework_06/app/templates/products/components/: back-to-the-main.html
homework_06/app/views/products/: crud.py  views.py
lessons/: lesson_01.py  lesson_02.py  lesson_03.py  lesson_05.py  lesson_06.py  lesson_07.py
lessons/lesson_08/: main2.py
lessons/lesson_09/: demo_as_dataclass.py  demo_as_dict.py  demo_as_namedtuple.py  main.py  pydantic+venv.py
lessons/lesson_10/: main.py
lessons/lesson_11/: demo_pathlib.py  file.txt  main.py
lessons/lesson_12/: main.md
lessons/lesson_13/: cars.csv  demo_config.ini  demo_csv.py  demo_ini.py  demo_json.json  demo_json.py  users.csv
lessons/lesson_14/: app.py  main.py
lessons/lesson_15/: Dockerfile  main.md
lessons/lesson_16/: console.sql  main.md
lessons/lesson_17/: demo_1_create_table.py  demo_2_declarative.py  demo_queries.py  main.md  queries.sql
lessons/lesson_18/: __init__.py  config.py  main.md  main.py  pyproject.toml
lessons/lesson_19/: __init__.py  main.md  main.py  pyproject.toml
lessons/lesson_20/: alembic.ini  main.md  main.py
lessons/lesson_21/: log_format_example.py  main.md  step_0.py  step_1.py  step_2.py  step_3.py  step_4.py  step_5.py  step_6.py  step_7.py  template.py
lessons/lesson_22/: __init__.py  config.py  main.md  main.py  pyproject.toml
lessons/lesson_23/: README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
lessons/lesson_23/fastapi-users-app/: app.py  config.py  main.py
lessons/lesson_23/fastapi-users-app/alembic/versions/: 2024_04_25_0141-9f25ec6c3b22_create_posts_table.py  2024_04_27_0138-ba95407813ad_create_posts_tags_association_table.py
lessons/lesson_23/fastapi-users-app/models/: db.py  post.py  user.py
lessons/lesson_23/fastapi-users-app/views/: hello.py  items.py
lessons/lesson_23/fastapi-users-app/views/dependencies/: db_session.py
lessons/lesson_23/fastapi-users-app/views/users/: crud.py  users_storage.py  views.py
lessons/lesson_25/: app.py  main.md
lessons/lesson_26/: app.py  main.md
lessons/lesson_27/: app.py  main.md
lessons/lesson_28/: app.py  main.md  (+1 more)
(+155 files in other folders)
