[tool.poetry]
name = "otus-projects"
version = "0.1.0"
description = ""
authors = ["Artem Balabashin <BalabashinAN@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.24.0.post1"
pydantic = "2.4.1"
annotated-types = "0.5.0"
anyio = "3.7.1"
attrs = "23.1.0"
build = "1.0.3"
cachecontrol = "0.13.1"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "2.1.1"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
distlib = "0.3.7"
dnspython = "2.4.2"
docker = "6.0.1"
dulwich = "0.21.6"
email-validator = "2.1.0.post1"
exceptiongroup = "1.1.3"
faker = "13.15.0"
fastapi = "0.104.1"
fastjsonschema = "2.19.0"
filelock = "3.13.1"
h11 = "0.14.0"
httpcore = "1.0.2"
httptools = "0.6.1"
httpx = "0.25.1"
idna = "3.4"
importlib-metadata = "6.8.0"
iniconfig = "2.0.0"
installer = "0.7.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jinja2 = "3.1.2"
keyring = "24.3.0"
markupsafe = "2.1.3"
more-itertools = "10.1.0"
msgpack = "1.0.7"
orjson = "3.9.10"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
pluggy = "1.3.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
ptyprocess = "0.7.0"
pycparser = "2.21"
pydantic-extra-types = "2.1.0"
pydantic-settings = "2.1.0"
pydantic-core = "2.10.1"
pyproject-hooks = "1.0.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
rapidfuzz = "3.5.2"
requests = "2.28.1"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
tomli = "2.0.1"
tomlkit = "0.12.3"
trove-classifiers = "2023.11.14"
typing-extensions = "4.8.0"
ujson = "5.8.0"
urllib3 = "1.26.16"
uvloop = "0.19.0"
virtualenv = "20.24.6"
watchfiles = "0.21.0"
websocket-client = "1.6.3"
websockets = "12.0"
xattr = "0.10.1"
zipp = "3.17.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.104.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
